--- a/README
+++ b/README
@@ -11,3 +11,8 @@ permitted in any  medium without royalty provided the copyright  notice and this
 notice are preserved.
 
 ================================================================================
+
+Contents
+--------
+
+================================================================================
