--- a/README
+++ b/README
@@ -15,4 +15,11 @@ notice are preserved.
 Contents
 --------
 
+COPYING
+
+================================================================================
+
+COPYING
+-------
+
 ================================================================================
