--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Copyright (C) 2021 Ralf Stephan (RaSt) <me@ralf-stephan.name>
 
 Copying  and  distribution of  this  file,  with  or without  modification,  are
 permitted in any  medium without royalty provided the copyright  notice and this
-notice are preserved.
+notice are preserved.  This file is offered as-is, without any warranty.
 
 ================================================================================
 
