--- a/README
+++ b/README
@@ -38,6 +38,6 @@ WARRANTY; without even the implied warranty  of MERCHANTABILITY or FITNESS FOR A
 PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 You should  have received a  copy of the GNU  General Public License  along with
-this program.  If not, see <https://www.gnu.org/licenses/>.
+this program in the file COPYING.  If not, see <https://www.gnu.org/licenses/>.
 
 ================================================================================
