* README: add section 'About'

--- a/README
+++ b/README
@@ -15,7 +15,13 @@ notice are preserved.  This file is offered as-is, without any warranty.
 Contents
 --------
 
+About
 COPYING
+
+================================================================================
+
+About
+-----
 
 ================================================================================
 
