* README: add section 'Install'

--- a/README
+++ b/README
@@ -16,12 +16,18 @@ Contents
 --------
 
 About
+Install
 COPYING
 
 ================================================================================
 
 About
 -----
+
+================================================================================
+
+Install
+-------
 
 ================================================================================
 
