* README: add section 'Usage'

--- a/README
+++ b/README
@@ -17,6 +17,7 @@ Contents
 
 About
 Install
+Usage
 COPYING
 
 ================================================================================
@@ -28,6 +29,11 @@ About
 
 Install
 -------
+
+================================================================================
+
+Usage
+-----
 
 ================================================================================
 
