* README: add section 'References'

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ About
 Install
 Usage
 COPYING
+References
 
 ================================================================================
 
@@ -59,3 +60,6 @@ You should  have received a  copy of the GNU  General Public License  along with
 this program in the file COPYING.  If not, see <https://www.gnu.org/licenses/>.
 
 ================================================================================
+
+References
+----------
