* README: add section 'Changelog'

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ About
 Install
 Usage
 COPYING
+Changelog
 References
 
 ================================================================================
@@ -58,6 +59,11 @@ PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 You should  have received a  copy of the GNU  General Public License  along with
 this program in the file COPYING.  If not, see <https://www.gnu.org/licenses/>.
+
+================================================================================
+
+CHangelog
+---------
 
 ================================================================================
 
