* README (Changelog): add 0.0.0

--- a/README
+++ b/README
@@ -65,6 +65,10 @@ this program in the file COPYING.  If not, see <https://www.gnu.org/licenses/>.
 CHangelog
 ---------
 
+0.0.0
+
+    Nothing special here.
+
 ================================================================================
 
 References
