* README: add section 'Development'

--- a/README
+++ b/README
@@ -18,6 +18,7 @@ Contents
 About
 Install
 Usage
+Development
 Copying
 Changelog
 References
@@ -36,6 +37,11 @@ Install
 
 Usage
 -----
+
+================================================================================
+
+Development
+-----------
 
 ================================================================================
 
