* README (Development): add how to make template
* src/.deps, src/Makefile, src/mod_ecl.c, src/modules.mk: new files

--- a/README
+++ b/README
@@ -43,6 +43,19 @@ Usage
 Development
 -----------
 
+Generate template for creating your own extension module using the apxs command.
+
+bash$> apxs -g -n 'ecl'
+
+This creates the files:
+
+.deps
+Makefile
+mod_ecl.c
+modules.mk
+
+Move this files to the mod_ecl/src/ directory.
+
 ================================================================================
 
 Copying
