* README (References): add local path to [1615297216]

--- a/README
+++ b/README
@@ -175,6 +175,9 @@ Apache HTTP Server
     Documentation.   2020.   --  https://httpd.apache.org/docs/2.4/en/  (online:
     2021-03-09 13:40:16 +0000)
 
+    see also:
+    /usr/share/doc/apache2-doc/
+
 [1615297807] The  Apache Software  Foundation.  Developer Documentation  for the
     Apache  HTTP Server  2.4.   2020.  --  https://httpd.apache.org/docs/2.4/en/
     developer/ (online: 2021-03-09 13:50:07 +0000)
