README: add section 'Todo'

--- a/README
+++ b/README
@@ -22,6 +22,7 @@ Development
 Copying
 Changelog
 References
+Todo
 
 ================================================================================
 
@@ -195,3 +196,8 @@ Apache HTTP Server
     bash$> info apxs
 
 Embeddable Common-Lisp
+
+================================================================================
+
+Todo
+----
