* README (Copying): edit layout of copyright notice and licnese notice
* src/Makefile, src/mod_ecl.c, src/modules.mk: edit layout of copyright
  notice and licnese notice

--- a/README
+++ b/README
@@ -130,23 +130,25 @@ should show an output similar to the following:
 Copying
 -------
 
-RaSt mod_ecl is an extension module for  the Apache HTTP Server.  It enables the
-Apache  HTTP  Server  to  run  scripts written  in  the  Embeddable  Common-Lisp
-language.
-
-Copyright (C) 2021 Ralf Stephan (RaSt) <me@ralf-stephan.name>
-
-RaSt mod_ecl  is free software: you  can redistribute it and/or  modify it under
-the terms of  the GNU General Public  License as published by  the Free Software
-Foundation,  either version  3 of  the License,  or (at  your option)  any later
-version.
-
-RaSt mod_ecl is distributed in the hope  that it will be useful, but WITHOUT ANY
-WARRANTY; without even the implied warranty  of MERCHANTABILITY or FITNESS FOR A
-PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
-You should  have received a  copy of the GNU  General Public License  along with
-this program in the file COPYING.  If not, see <https://www.gnu.org/licenses/>.
+// RaSt mod_ecl is  an extension module for the Apache  HTTP Server.  It enables
+// the Apache HTTP  Server to run scripts written in  the Embeddable Common-Lisp
+// language.
+//
+// Copyright (C) 2021 Ralf Stephan (RaSt) <me@ralf-stephan.name>
+//
+// RaSt mod_ecl is free software: you can redistribute it and/or modify it under
+// the terms of the GNU General Public License as published by the Free Software
+// Foundation, either  version 3 of the  License, or (at your  option) any later
+// version.
+//
+// RaSt mod_ecl is distributed  in the hope that it will  be useful, but WITHOUT
+// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+// FOR  A PARTICULAR  PURPOSE.   See the  GNU General  Public  License for  more
+// details.
+//
+// You should have received a copy of  the GNU General Public License along with
+// this     program     in     the     file    COPYING.      If     not,     see
+// <https://www.gnu.org/licenses/>.
 
 ================================================================================
 
