* READMW (Changelog): fix spelling

--- a/README
+++ b/README
@@ -166,7 +166,7 @@ Copying
 
 ================================================================================
 
-CHangelog
+Changelog
 ---------
 
 0.0.0
