* README (Install): add note

--- a/README
+++ b/README
@@ -39,6 +39,8 @@ You can download the source code from:
 https://github.com/RaStBh/mod_ecl
 https://gitlab.com/RaStBh/mod_ecl
 
+Download the latest Version.
+
 ================================================================================
 
 Usage
