--- a/README
+++ b/README
@@ -276,6 +276,14 @@ Changelog
     Introducing  doxygen  for  documentation.  Adding  proper  comments.   Small
     changes to the code.  And other changes.
 
+0.1.2
+
+    Add notes about usage.
+
+0.1.3
+
+    Add missing comment.
+
 ================================================================================
 
 References
