README (Changelog): add item 0.2.0

--- a/README
+++ b/README
@@ -284,6 +284,10 @@ Changelog
 
     Add missing comment.
 
+0.2.0
+
+    Read file and output its content.
+
 ================================================================================
 
 References
