--- a/README
+++ b/README
@@ -109,7 +109,6 @@ Using the lynx command
 
 should show an output similar to the following:
 
-
     <!DODCTYPE html>
     <html>
         <head>
@@ -125,7 +124,7 @@ should show an output similar to the following:
             <br>
             file content:<br>
             ===== Begin =====<br>
-    Hello form test.ecl!<br>
+    Hello from test.ecl!<br>
             ===== END =======<br>
         </body>
     </html>
