* README (Changelog): add 0.2.1 and 0.2.2

--- a/README
+++ b/README
@@ -288,6 +288,14 @@ Changelog
 
     Read file and output its content. And other changes.
 
+0.2.1
+
+    Fix whitespace and spelling.
+
+0.2.2
+
+  Add missing comment.
+
 ================================================================================
 
 References
