--- a/README
+++ b/README
@@ -137,12 +137,12 @@ Development
 
 My development environment is:
 
-    Debian GNU/Linux 9.13 (stretch)
-    Apache HTTP Server 2.4.25
-    Embeddable  Common-Lisp (EXL) 15.3.7
-    Apache Portable Runtime (APR) 1.5.2
-    Apache Portable Runtime Utility Library (APR-util) 1.5.4
-    Apache HTTP Request Library 2.13
+    Ubuntu 20.04.2 LTS (GNU/Linux 5.4.0-70-generic x86_64)
+    Apache HTTP Server 2.4.41 (Ubuntu)
+    Embeddable Common-Lisp (ECL) 16.1.3
+    GNU CLISP 2.49.92
+    Apache Portable Runtime (APR) 1.6.5
+    Apache Portable Runtime Utility Library (APR-util) 1.6.1
 
 To create an example module to test your environment you can generate a template
 module by using the APache eXtenSion tool (apxs).
