--- a/README
+++ b/README
@@ -579,7 +579,7 @@ Changelog
 
 0.4.0
 
-
+    Get MIME header environment from the request.
 
 ================================================================================
 
