Set content type from ECL script.
README [Chnagelog]

* add item for 0.4.6

doc/ecl/index.ecl

* show the content type

src/mod_ecl.c [getContentType, setContentType, evaluateByEcl]

* functions to get and set the content type
* set the content type

--- a/README
+++ b/README
@@ -622,6 +622,10 @@ Changelog
 
     set content type from ECL script
 
+0.4.6
+
+    something went wront with 0.4.5.
+
 ================================================================================
 
 References
