Remove development test output.
README

* add item for 0.4.7

doc/ecl/index.ecl

* add output for HTML

src/mod_ecl.c

* remove development test output

--- a/README
+++ b/README
@@ -626,6 +626,10 @@ Changelog
 
     something went wront with 0.4.5.
 
+0.4.7
+
+    Remove development test output.
+
 ================================================================================
 
 References
