Add new section "Contents".
README [Contents]:

* add new section

--- a/README
+++ b/README
@@ -9,3 +9,8 @@ Copyright (c) 2021 Ralf Stephan (RaSt) <me@ralf-stephan.name>
 Copying  and  distribution of  this  file,  with  or without  modification,  are
 permitted in any  medium without royalty provided the copyright  notice and this
 notice are preserved.  This file is offered as-is, without any warranty.
+
+===============================================================================
+
+Contents
+--------
